# squeeel

./: .eslintrc.js  .gitignore  LICENSE  README.md  bun.lockb  docker-compose.yml  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  general.yml  lint_pr.yml  release-plz.yml  release_rust.yml
example/: package.json
example/src/: a.d.ts  main.ts  squeeel.d.ts
examples/: docker-compose.yml
examples/better-sqlite3/: package-lock.json  package.json  seed.sql  seeded_db.db  tsconfig.json
examples/better-sqlite3/src/: index.ts  squeeel.better-sqlite3.d.ts  squeeel.d.ts
examples/mysql2/: .env  package-lock.json  package.json  seed.sql
examples/mysql2/src/: index.ts  squeeel.d.ts
examples/node-postgres/: .env  package-lock.json  seed.sql  tsconfig.json
examples/node-postgres/src/: index.ts  squeeel.d.ts
examples/postgres/basic/: CHANGELOG.md  README.md  bun.lockb  index.ts  migration.sql  package.json
examples/postgres/basic/migrations/: initial.sql
npm-package/: README.md  binary.js  package-lock.json  package.json
squeeel-cli/: CHANGELOG.md  Cargo.toml
squeeel-cli/src/: describe.rs  lib.rs  main.rs  visitor.rs
squeeel-cli/src/sql_libs/: better_sqlite3.rs  mod.rs  mysql2.rs  node_postgres.rs
squeeel-cli/src/utils/: constants.rs  mod.rs  ts_types.rs
