[package]
name = "squeeel-cli"
description = "Make your raw SQL queries type-safe instantly"
license = "Apache-2.0"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "macros", "all-databases"] }
sqlx-core = { version = "0.7.4", features = ["offline"] }
sqlx-postgres = { version = "0.7.4", features = ["offline"] }
sqlx-sqlite = { version = "0.7.4", features = ["offline"] }
sqlx-mysql = { version = "0.7.4", features = ["offline"] }
swc_atoms = "5.0.0"
swc_common = { version = "12.0.0", features = ["tty-emitter"] }
swc_core = { version = "27.0.0", features = ["__ecma", "__visit"] }
swc_ecma_ast = "12.0.0"
swc_ecma_codegen = "14.0.0"
swc_ecma_parser = "15.0.0"
tokio = { version = "1.45.1", features = ["full"] }
walkdir = "2.5.0"
